--- a/jupyter/requirements.txt
+++ b/jupyter/requirements.txt
@@ -45,6 +45,7 @@ scipy==1.2.1
 
 ##### Machine Learning packages
 scikit-learn==0.20.3
+imblearn
 
 # Optional: the XGBoost library is only used in the ensemble learning chapter.
 xgboost==0.82
